--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -141,7 +141,7 @@
           <div class="field-input-wrapper">
             <input type="password" id="new_password" name="new_password" class="field-input" 
                    autocomplete="new-password" required minlength="8" />
-            <span class="note">Minimum 8 characters.</span>
+            <span class="note">Minimum 8 characters, uppercase, lowercase, and number required.</span>
           </div>
         </div>
         <div class="field-row editable vertical-value">
