--- a/app/templates/partials/_achievement_modal.html
+++ b/app/templates/partials/_achievement_modal.html
@@ -26,7 +26,7 @@
         <!-- Row 2: Type + Issue Date -->
         <div class="planner-form-group">
           <label for="achievement_type">Type <span class="required-field">*</span></label>
-          <select id="achievement_type" name="type" class="planner-form-control" required>
+          <select id="achievement_type" name="achievement_type" class="planner-form-control">
             <option value="" disabled selected>Select Type...</option>
             <option value="level-completion" data-icon="fa-medal">Level Completion</option>
             <option value="path-completion" data-icon="fa-route">Path Completion</option>
